--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iluminando o Futuro - ONG</title>
+    <title>Iluminando o Futuro</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="./assets/iluminando.png" type="image/x-icon">
 </head>
 <body>
   <header>
