--- a/index.html
+++ b/index.html
@@ -38,9 +38,40 @@
     <section id="sobre">
         <h2 class="section-title">Sobre Nós</h2>
         <div class="about-content">
-            <p>A ONG Iluminando o Futuro trabalha incansavelmente para transformar a vida de crianças e jovens através da educação e desenvolvimento pessoal. Nossa missão é criar oportunidades e iluminar caminhos para um futuro promissor.</p>
+            <p class="sobre">
+                Iluminando o Futuro é uma organização dedicada ao desenvolvimento social e à transformação de vidas. Nossa missão é proporcionar oportunidades de aprendizado e crescimento, especialmente em comunidades onde o tempo ocioso pode ser um desafio. Acreditamos no poder do conhecimento para mudar realidades e construir um futuro mais brilhante.
+            </p>
+            <p class="sobre">
+                Com programas inovadores e atividades que engajam e inspiram, buscamos converter o tempo livre em momentos de aprendizado significativo. Estamos comprometidos em ajudar pessoas a desenvolverem novas habilidades, aumentar sua autoestima e conquistar seus objetivos.
+            </p>
+            <div class="horario">
+                <h3>Horário de Atendimento</h3>
+                <p>De segunda a sexta-feira, das <strong>08h às 21h</strong>. Estamos prontos para receber você durante esses horários para atividades, apoio e desenvolvimento de novos projetos.</p>
+            </div>
         </div>
     </section>
+
+    <section id="parcerias">
+        <h2 class="section-title">Nossas Parcerias</h2>
+        <div class="partnership-carousel">
+            <div class="carousel-wrapper">
+                <div class="carousel-item">
+                    <img src="./assets/fla.png" alt="Parceiro 1">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/uni.png" alt="Parceiro 2">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/aguas.png" alt="Parceiro 3">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/svb.png" alt="Parceiro 4">
+                </div>
+                
+            </div>
+        </div>
+    </section>
+    
 
     <section id="projetos">
         <h2 class="section-title">Nossos Projetos</h2>
@@ -118,14 +149,6 @@
             <input type="text" id="name" required>
         </div>
         <div class="form-group">
-            <label for="email">E-mail</label>
-            <input type="email" id="email" required>
-        </div>
-        <div class="form-group">
-            <label for="phone">Telefone</label>
-            <input type="tel" id="phone" required>
-        </div>
-        <div class="form-group">
             <label for="area">Área de Interesse</label>
             <select id="area" required>
                 <option value="">Selecione uma área</option>
@@ -134,13 +157,10 @@
                 <option value="esporte">Esporte</option>
             </select>
         </div>
-        <div class="form-group">
-            <label for="message">Mensagem</label>
-            <textarea id="message" rows="4"></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary">Enviar</button>
+        <button type="button" class="btn btn-primary" onclick="sendVolunteerWhatsApp()">Entrar em Contato pelo WhatsApp</button>
     </form>
 </section>
+
 
 
 <section id="doacao">
@@ -177,16 +197,12 @@
                 <input type="text" id="named" required>
             </div>
             <div class="form-group">
-                <label for="emaild">E-mail</label>
-                <input type="email" id="emaild" required>
-            </div>
-            <div class="form-group">
                 <label for="material">Materiais para Doação</label>
                 <textarea id="material" rows="4" required></textarea>
             </div>
             <div class="form-group">
                 <label for="pickup">Necessita Retirada?</label>
-                <select id="pickup" required>
+                <select id="pickup" onchange="toggleAddress()" required>
                     <option value="">Selecione</option>
                     <option value="sim">Sim</option>
                     <option value="nao">Não</option>
@@ -196,10 +212,11 @@
                 <label for="address">Endereço em caso de retirada</label>
                 <textarea id="address" rows="4"></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
+            <button type="button" class="btn btn-primary" onclick="sendDonationWhatsApp()">Entrar em Contato pelo WhatsApp</button>
         </form>
     </div>
 </div>
+
 
 
 
