--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <div class="social-links">
             <a 
             target="_blank"
-            href="https://l.instagram.com/?u=http%3A%2F%2Fwa.me%2F5521968828026%3Ffbclid%3DPAZXh0bgNhZW0CMTEAAaa0-0KMH4hqICrfixmF8wk9iJzkYk4uSWvL0AgM9iCUUWsWDeFlHnMVLYI_aem_sUWpE5Tgq7s_JL90tWZCDg&e=AT0DdBXCeKKlKfjfY_NoTrG3T3uLuDV0d2feMCyUSsQwJS3frVyjwmr0rMgAwiAo_j6W-tLRCJ1oURI7E_PmjlWJcG3C87TLK22qUFq5UNyfMlOlzlQJNg"
+            href="https://api.whatsapp.com/send/?phone=5521968828026&text&type=phone_number&app_absent=0"
             ><i class="fab fa-whatsapp"></i></a>
             <a target="_blank" href="https://www.instagram.com/iluminandoofuturo/"><i class="fab fa-instagram"></i></a>
         </div>
