--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="nav-links">
             <a href="#sobre">Sobre</a>
             <a href="#projetos">Projetos</a>
+            <a href="#oficinas">Oficinas</a>
             <a href="#galeria">Galeria</a>
             <a href="#videos">Vídeos</a>
             <a href="#voluntario">Seja Voluntário</a>
@@ -65,9 +66,6 @@
                     <img src="./assets/aguas.png" alt="Parceiro 3">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/svb.png" alt="Parceiro 4">
-                </div>
-                <div class="carousel-item">
                     <img src="./assets/rs.png" alt="Parceiro 5">
                 </div>
                 <div class="carousel-item">
@@ -102,6 +100,126 @@
             </div>
         </div>
     </section>
+
+    <section id="oficinas">
+        <h2 class="section-title">Oficinas</h2>
+        <div class="oficinas-container">
+            <div class="oficina-card">
+                <div class="oficina-info">
+                    <h3>Reforço Escolar</h3>
+                    <p>
+                        Nossa ONG é dedicada a apoiar crianças e adolescentes por meio de programas de reforço escolar, oferecendo oportunidades para que cada estudante possa alcançar seu pleno potencial.
+                        Além disso, buscamos criar um ambiente acolhedor e estimulante, onde cada jovem tenha acesso ao conhecimento e às ferramentas necessárias para um futuro mais promissor. 
+                        Juntos, acreditamos que a educação é a chave para a transformação e o empoderamento de comunidades!
+                    </p>
+                    <p><strong>Dia(s) da semana:</strong> Terça-feira e  Quarta-feira</p>
+                    <br>
+                    <p>Grupo 1</p>
+                    <p><strong>Horário:</strong> 17:30 às 19:00</p>
+                    <br>
+                    <p>Grupo 2</p>
+                    <p><strong>Horário:</strong> 19:00 às 20:30</p>
+                </div>
+            </div>
+
+            <div class="oficina-card">
+                <div class="oficina-info">
+                    <h3>Alfabetização</h3>
+                    <p>
+                        Nossa ONG tem como missão promover a alfabetização de crianças e adultos em situações de vulnerabilidade social.
+                         Acreditamos que a leitura e a escrita são direitos fundamentais para o exercício da cidadania e o desenvolvimento pessoal. 
+                         Por meio de programas de ensino personalizados, oferecemos apoio a estudantes que estão em processo de alfabetização, 
+                         utilizando metodologias dinâmicas e interativas que facilitam o aprendizado. 
+                    </p>
+                    <p><strong>Dia(s) da semana:</strong> Segunda-feira e  Quinta-feira</p>
+                    <br>
+                    <p><strong>Horário:</strong> 16:00 às 17:30</p>
+                </div>
+            </div>
+
+            <div class="oficina-card">
+                <div class="oficina-info">
+                    <h3>Artes Ciências e Áudio Visual</h3>
+                    <p>
+                        Nossa ONG promove o acesso à arte, ciência e audiovisual como ferramentas de aprendizado, expressão e transformação social. 
+                        Oferecemos oficinas, cursos e projetos interativos que unem criatividade e conhecimento, incentivando crianças e  jovens a explorar novas perspectivas 
+                        e desenvolver habilidades práticas. Nossas iniciativas incluem desde a criação de curtas-metragens e produção audiovisual até atividades científicas
+                         experimentais e expressões artísticas diversificadas, como pintura, teatro e música. 
+                        Acreditamos no poder das artes e das ciências para inspirar e empoderar, construindo pontes para um futuro mais inclusivo, criativo e inovador.
+                    </p>
+                    <p><strong>Dia(s) da semana:</strong> Segunda-feira e  Quinta-feira</p>
+                    <br>
+                    <p><strong>Horário:</strong> 17:00 às 19:00</p>
+                </div>
+            </div>
+
+            <div class="oficina-card">
+                <div class="oficina-info">
+                    <h3>Reforço de Matemática</h3>
+                    <p>
+                        Nossa ONG é focada em oferecer reforço de matemática para crianças e jovens que enfrentam dificuldades na disciplina.
+                         Com metodologias práticas e dinâmicas, trabalhamos para tornar a matemática acessível e descomplicada, ajudando os estudantes a melhorar o 
+                         desempenho escolar e a confiança em suas habilidades. Nossas aulas incluem resolução de problemas, conceitos fundamentais e estratégias para desenvolver o 
+                         raciocínio lógico, tudo em um ambiente acolhedor e estimulante.
+                         Acreditamos que, com o suporte certo, todos podem alcançar o sucesso e se apaixonar pela matemática!
+                    </p>
+                    <p><strong>Dia(s) da semana:</strong> Segunda-feira </p>
+                    <br>
+                    <p>Grupo 1</p>
+                    <p><strong>Horário:</strong> 19:00 às 20:00</p>
+                    <br>
+                    <p>Grupo 2</p>
+                    <p><strong>Horário:</strong> 20:00 às 21:00</p>
+                </div>
+            </div>
+
+            <div class="oficina-card">
+                <div class="oficina-info">
+                    <h3>Futebol</h3>
+                    <p>
+                        Nossa ONG utiliza o futebol como ferramenta de inclusão social, desenvolvimento pessoal e formação cidadã. Por meio de treinos
+                     e atividades educativas, promovemos a disciplina, o trabalho em equipe e o respeito entre crianças e jovens de comunidades.
+                        Além de ensinar técnicas e fundamentos do esporte, também incentivamos valores como comprometimento, liderança e solidariedade.
+                         Acreditamos que o futebol vai além do campo, sendo um caminho para construir oportunidades e transformar vidas!
+                    </p>
+                    <p><strong>Dia(s) da semana:</strong> Quarta-feira</p>
+                    <br>
+                    <p><strong>Horário:</strong> 20:15 às 21:15</p>
+                </div>
+            </div>
+
+            <div class="oficina-card">
+                <div class="oficina-info">
+                    <h3>Capoeira</h3>
+                    <p>
+                        Nossa ONG promove a capoeira como instrumento de transformação social, resgate cultural e fortalecimento comunitário. 
+                        Oferecemos aulas e rodas de capoeira que integram movimento, música e história, proporcionando às crianças, jovens e adultos uma experiência única de aprendizado e 
+                        conexão com suas raízes. Mais do que uma expressão cultural, a capoeira ensina valores como disciplina, respeito, resistência e cooperação. 
+                        Acreditamos que, por meio dessa arte, é possível empoderar indivíduos e construir um futuro mais inclusivo e cheio de possibilidades!
+                    </p>
+                    <p><strong>Dia(s) da semana:</strong> Sexta-feira</p>
+                    <br>
+                    <p><strong>Horário:</strong> 17:30 às 19:00</p>
+                </div>
+            </div>
+
+            <div class="oficina-card">
+                <div class="oficina-info">
+                    <h3>Muay Thai</h3>
+                    <p>
+                        Nossa ONG utiliza o Muay Thai como ferramenta de desenvolvimento físico, mental e social. Oferecemos aulas gratuitas para crianças de 6 a 12 anos, 
+                        promovendo disciplina, autocontrole, respeito e superação. Mais do que uma arte marcial, o Muay Thai ensina habilidades que vão além do tatame, como foco, 
+                        confiança e resiliência, ajudando os participantes a enfrentarem desafios dentro e fora do esporte. 
+                        Acreditamos que, por meio da prática do Muay Thai, é possível transformar vidas e criar oportunidades para um futuro melhor!
+                    </p>
+                    <p><strong>Dia(s) da semana:</strong> Quinta-feira</p>
+                    <br>
+                    <p><strong>Horário:</strong> 20:45 às 21:45</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    
 
     <section id="galeria">
         <h2 class="section-title">Galeria</h2>
