Navegação no celular

--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
     <link rel="icon" href="./assets/iluminando.png" type="image/x-icon">
 </head>
 <body>
-  <header>
-    <nav>
-        <div class="logo">
+    <header>
+        <nav>
+          <div class="logo">
             <img src="./assets/iluminando.png" alt="Logo Iluminando o Futuro" class="logo-img">
             <span class="logo-text">Iluminando o Futuro</span>
-        </div>
-        <div class="nav-links">
+          </div>
+          <button class="menu-toggle" aria-label="Abrir Menu">
+            <i class="fas fa-bars"></i>
+          </button>
+          <div class="nav-links">
             <a href="#sobre">Sobre</a>
             <a href="#projetos">Projetos</a>
             <a href="#oficinas">Oficinas</a>
@@ -24,9 +27,10 @@
             <a href="#videos">Vídeos</a>
             <a href="#voluntario">Seja Voluntário</a>
             <a href="#doacao">Doe</a>
-        </div>
-    </nav>
-</header>
+          </div>
+        </nav>
+      </header>
+      
 
     <section class="hero">
         <div class="hero-content">
