Alteeração no pix

--- a/index.html
+++ b/index.html
@@ -339,10 +339,10 @@
         <div class="donation-card">
             <h3>Doação via Pix</h3>
             <p>Escaneie o QR Code abaixo para fazer sua doação</p>
-            <img src="./assets/qrcode.png" alt="QR Code Pix" class="qrcode-pix">
+            <img src="./assets/qr.png" alt="QR Code Pix" class="qrcode-pix">
             <!-- Chave Pix abaixo do QR Code -->
             <div class="pix-info">
-                <p>Chave Pix: 123.456.789.00</p>
+                <p>Chave Pix: 55.822.693/0001-90</p>
                 <button class="btn btn-primary" onclick="copyPixKey()" id="copyPixBtn">Copiar Chave</button>
             </div>
         </div>
