--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <a href="#oficinas">Oficinas</a>
             <a href="#galeria">Galeria</a>
             <a href="#videos">Vídeos</a>
+            <a href="#workshops">Workshops</a>
             <a href="#voluntario">Seja Voluntário</a>
             <a href="#doacao">Doe</a>
           </div>
