Atualização do workshop

--- a/index.html
+++ b/index.html
@@ -309,8 +309,7 @@
             <div class="workshop-info">
                 <h3>Paixão em Jogo: Workshop Oficial do Flamengo</h3>
                 <p>
-                    Mergulhe na história, na tradição e nos bastidores do Flamengo! Participe deste workshop exclusivo que reúne palestras inspiradoras, 
-                    dinâmicas interativas e uma experiência única com a Nação Rubro-Negra.
+                    Mergulhamos na história, na tradição e nos bastidores do Clube do do Flamengo! Participar deste workshop exclusivo que reunir palestras inspiradoras, dinâmicas interativas e uma experiência única com a Nação rubro-negra.
                 </p>
             </div>
         </div>
