--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="FsaEPQUz2TWdrwx7ODhfERAkX9Uxo_H8_2t5FnsOBDc" />
+    <meta name="description" content="Iluminando o Futuro - Transforme vidas com projetos sociais, oficinas e ações educativas. Doe, participe e inspire mudanças.">
+    <meta name="keywords" content="ONG, projetos sociais, oficinas, doações, educação, transformação social, voluntariado">
     <title>Iluminando o Futuro</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
