Melhorando os textos

--- a/index.html
+++ b/index.html
@@ -317,9 +317,12 @@
         <div class="workshop-card">
             <img src="./assets/workshopfla.jpg" alt="Paixão em Jogo: Workshop Oficial do Flamengo " loading="lazy">
             <div class="workshop-info">
-                <h3>Paixão em Jogo: Workshop Oficial do Flamengo</h3>
+                <h3>Passe Perfeito</h3>
                 <p>
-                    Mergulhamos na história, na tradição e nos bastidores do Clube do do Flamengo! Participar deste workshop exclusivo que reunir palestras inspiradoras, dinâmicas interativas e uma experiência única com a Nação rubro-negra.
+                    Mergulhamos na história, nas tradições e nos bastidores do Clube de Regatas do Flamengo! 
+                    Tivemos o privilégio de participar de um workshop exclusivo, que proporcionou palestras inspiradoras, 
+                    dinâmicas interativas e uma experiência inesquecível junto à vibrante Nação Rubro-Negra.
+
                 </p>
             </div>
         </div>
