--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
             <div class="oficina-card">
                 <div class="oficina-info">
-                    <h3>Artes Ciências e Áudio Visual</h3>
+                    <h3>Artes Cênicas e Áudio Visual</h3>
                     <p>
                         Nossa ONG promove o acesso à arte, ciência e audiovisual como ferramentas de aprendizado, expressão e transformação social. 
                         Oferecemos oficinas, cursos e projetos interativos que unem criatividade e conhecimento, incentivando crianças e  jovens a explorar novas perspectivas 
