--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
 
             <div class="oficina-card">
                 <div class="oficina-info">
-                    <h3>Artes Cênicas e Áudio Visual</h3>
+                    <h3>Arte Cênica e Audiovisual</h3>
                     <p>
-                        Nossa ONG promove o acesso à arte, ciência e audiovisual como ferramentas de aprendizado, expressão e transformação social. 
-                        Oferecemos oficinas, cursos e projetos interativos que unem criatividade e conhecimento, incentivando crianças e  jovens a explorar novas perspectivas 
-                        e desenvolver habilidades práticas. Nossas iniciativas incluem desde a criação de curtas-metragens e produção audiovisual até atividades científicas
-                         experimentais e expressões artísticas diversificadas, como pintura, teatro e música. 
-                        Acreditamos no poder das artes e das ciências para inspirar e empoderar, construindo pontes para um futuro mais inclusivo, criativo e inovador.
-                    </p>
+                        Nossa ONG promove o acesso à arte cênica, ciência e audiovisual como poderosas ferramentas de aprendizado, expressão e transformação social. 
+                        Oferecemos oficinas, cursos e projetos interativos que combinam criatividade e conhecimento, incentivando crianças e jovens a explorar novas perspectivas 
+                        e a desenvolver habilidades práticas. Nossas iniciativas abrangem desde a criação de curtas-metragens e produção audiovisual até atividades científicas 
+                        experimentais e expressões artísticas diversificadas, como teatro, música e pintura. 
+                        Acreditamos no impacto transformador da arte e da ciência para inspirar e empoderar, construindo caminhos para um futuro mais inclusivo, criativo e inovador.
+                    </p>                    
                     <p><strong>Dia(s) da semana:</strong> Segunda-feira e  Quinta-feira</p>
                     <br>
                     <p><strong>Horário:</strong> 17:00 às 19:00</p>
