--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <div class="oficina-info">
                     <h3>Arte Cênica e Audiovisual</h3>
                     <p>
-                        Nossa ONG promove o acesso à arte cênica, ciência e audiovisual como poderosas ferramentas de aprendizado, expressão e transformação social. 
+                        Nossa ONG promove o acesso à arte cênica e audiovisual como poderosas ferramentas de aprendizado, expressão e transformação social. 
                         Oferecemos oficinas, cursos e projetos interativos que combinam criatividade e conhecimento, incentivando crianças e jovens a explorar novas perspectivas 
                         e a desenvolver habilidades práticas. Nossas iniciativas abrangem desde a criação de curtas-metragens e produção audiovisual até atividades científicas 
                         experimentais e expressões artísticas diversificadas, como teatro, música e pintura. 
